# life-game

./: CMakeLists.txt  README.md  read.me
lib/field/: CMakeLists.txt
lib/field/include/: field.h
lib/field/src/: field.cpp
lib/file/: CMakeLists.txt
lib/file/include/: file.h
lib/file/src/: file.cpp
lib/game/: CMakeLists.txt
lib/game/include/: game.h
lib/game/src/: game.cpp
lib/modes/online_mode/: CMakeLists.txt
lib/modes/online_mode/include/: online_mode.h
lib/modes/online_mode/src/: online_mode.cpp
src/: main.cpp
src/files/examples/: cycle.txt  pulsar.txt
src/files/input/: input.txt
src/files/output/: out.txt
